# gemini-enterprise-warehouse

./: .gitignore  README.md  p1_v1.py
v0-local-prototype/: README.md  main.py  pyproject.toml
v1-dockerized/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
v1-dockerized-uv-only/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
v2-bq-mcp-tool-server/: Dockerfile  README.md  cloudbuild.yaml
v2-bq-mcp-tool-server/agent-service/: Dockerfile  main.py  pyproject.toml
v2-bq-mcp-tool-server/bq-mcp-server/: main.py  pyproject.toml
