[project]
name = "bq-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-cloud-bigquery>=3.41.0",
    "mcp>=1.27.1",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.48.0",
]
